Add profile detail page and real-time chat